--- a/STUDY AREA - ENTREPRENEURSHIP ARTICLES/index.html
+++ b/STUDY AREA - ENTREPRENEURSHIP ARTICLES/index.html
@@ -13,8 +13,11 @@
 
 </head>
 <body>
+	
+
     <style>
         body{
+			boder:none;
             background:rgb(247,247,247);
         }
     </style>
