--- a/STUDY AREA - ENTREPRENEURSHIP ARTICLES/index.html
+++ b/STUDY AREA - ENTREPRENEURSHIP ARTICLES/index.html
@@ -17,11 +17,11 @@
 
     <style>
         body{
-            background:rgb(247,247,247);
+            background:rgb(246,246,246);
         }
     </style>
 
-    <div style="padding:0; box-shadow: 3px 0px 25px rgba(0, 0, 0, 0.25);
+    <div style="padding:0; box-shadow: 3px 0px 25px rgba(0, 0, 0, 0.11);
     border-radius: 10px; max-width: 1230px; background-color: white;" class="container-fluid">
 
     <header >
@@ -42,7 +42,7 @@
             <div class="bottomrow d-none d-md-flex align-items-center justify-content-between">
                 <div class="left-side d-flex align-items-center">
                     <div class="parent-box">
-                        <a href="entrepreneurship-articles.html" class="d-flex align-items-center justify-content-center text-capitalize text-center parent-link">Entrepreneurship <br> Articles</a>
+                        <a style="color:#529AD0; font-weight: 600; font-family: Noto Sans;"  href="entrepreneurship-articles.html" class="d-flex align-items-center justify-content-center text-capitalize text-center parent-link">Entrepreneurship <br> Articles</a>
                         <div style="z-index: 1000;" class="submenu arrow-show">
                             <div class="arow-div"></div>
                             <a href="#" class="child-link">Strategy</a>
@@ -77,7 +77,7 @@
                     </div>
 
                     <div class="parent-box">
-                        <a style="color:#529AD0; font-weight: 600; font-family: Noto Sans;" href="#" class="d-flex align-items-center justify-content-center text-capitalize text-center parent-link">Research <br> Reports</a>
+                        <a href="#" class="d-flex align-items-center justify-content-center text-capitalize text-center parent-link">Research <br> Reports</a>
                         <div style="z-index: 1000;" class="submenu arrow-show">
                             <div style="left:73px;"  class="arow-div"></div>
                             <a href="#" class="child-link">Management</a>
@@ -178,10 +178,12 @@
         <div class="row ">
             
             <div class="col-sm-12 d-flex flex-column justify-content-center align-items-center">
-                <p style="color:#757575; font-family: Titillium Web; line-height: 25px; letter-spacing: 0.1em;" class="h2 text-center">Research Reports</p>
+                <p style="color:#757575; font-family: Titillium Web; line-height: 25px; letter-spacing: 0.1em;" class="h2 text-center">Entrepreneurship Articles</p>
                 <div class="blue-line"></div>
                 <img src="img/headerImg.png" alt="" class="img-fluid">
-                <p  class="text-center h-para">The Case Studies section is a great way to learn without much statistical jargon, but they lack the empirical research. How can we know if someone’s outcomes were purely a calculating effort ors simply coincidental? In this section, we solve this dilemma. We evaluate, investigate, test the odds, and come up with reports that are more reliable for conclusions.</p>
+                <p style="font-size: 20px; color:#424242; line-height: 35px;" class="text-center h-para">
+                    This section is based on Saliba’s (2020) Entropia Model. Here you will find the key components that are necessary for the essence of entrepreneurship. Ranging from leadership to strategy, you will equip yourself with the fundamentals to establish and maintain your business.
+                </p>
         
             </div>
          </div>  
@@ -196,9 +198,9 @@
 
             <div class="col-md-6 title-content">
 
-                <img style="max-width:82px; max-height: 82px;" src="img/qualitativeicon.png" alt="" class="img-fluid">
-                <h3 style="color: #529AD0; font-family: Noto Sans; font-style: normal; font-weight: 500; font-size:26px; line-height: 25px; margin: 10px 0;">Qualitative</h3>
-                <p>Browse our ever-growing list of<br> qualitative research reports.</p>
+                <img style="max-width:82px; max-height: 82px;" src="img/ICON - Strategy.png" alt="" class="img-fluid">
+                <h3 style="color: #529AD0; font-family: Noto Sans; font-style: normal; font-weight: 500; font-size:26px; line-height: 25px; margin: 10px 0;">Strategy</h3>
+                <p>Browse our ever-growing list of<br> strategy-related articles</p>
                 <a href="#" style="max-width: 180px;" id="article-button">See all Articles</a>
 
             </div>
@@ -258,9 +260,9 @@
 
             <div class="col-md-6 title-content">
 
-                <img src="img/quantitative.png" alt="" class="img-fluid">
-                <h3 style="color: #529AD0; font-family: Noto Sans; font-style: normal; font-weight: 500; font-size:26px; line-height: 25px; margin: 10px 0;">Quantitative</h3>
-                <p>Browse our ever-growing list of<br> qualitative research reports.</p>
+                <img src="img/ICON - Innovation.png" alt="" class="img-fluid">
+                <h3 style="color: #529AD0; font-family: Noto Sans; font-style: normal; font-weight: 500; font-size:26px; line-height: 25px; margin: 10px 0;">Innovation</h3>
+                <p>Browse our ever-growing list of<br> innovation-related articles</p>
                 <a href="#" style="max-width: 180px;" id="article-button">See all Articles</a>
 
             </div>
@@ -321,9 +323,9 @@
 
             <div class="col-md-6 title-content">
 
-                <img src="img/request_on_demand.png" alt="" class="img-fluid">
-                <h3 style="color: #529AD0; font-family: Noto Sans; font-style: normal; font-weight: 500; font-size:26px; line-height: 25px; margin: 10px 0;">Request on Demand</h3>
-                <p>Browse our ever-growing list of<br> qualitative research reports.</p>
+                <img src="img/ICON - System.png" alt="" class="img-fluid">
+                <h3 style="color: #529AD0; font-family: Noto Sans; font-style: normal; font-weight: 500; font-size:26px; line-height: 25px; margin: 10px 0;">System</h3>
+                <p>Browse our ever-growing list of <br> system-related articles</p>
                 <a href="#" style="max-width: 180px;" id="article-button">See all Articles</a>
 
             </div>
@@ -376,6 +378,10 @@
     </div>
 
     <div class="container"><div style="margin-bottom: 0px;" class="grey-line"></div></div>
+
+    <div  class="container d-flex justify-content-center">
+    <a  href="#" style="width: 130px; margin-top: 70px;" id="article-button">Load More</a>
+</div>
 
     <footer >
         <div style="max-width: 1100px;" class="subscribe d-flex justify-content-between px-3 px-lg-0 flex-wrap flex-md-nowrap">
