--- a/STUDY AREA - ENTREPRENEURSHIP ARTICLES (Strategy)/index.html
+++ b/STUDY AREA - ENTREPRENEURSHIP ARTICLES (Strategy)/index.html
@@ -193,10 +193,10 @@
 
     <div class="container">
 
-        <div class="row d-flex justify-content-center">
-        <form  class="d-flex align-items-center justify-content-center ">
+        <div  class="row  d-flex  justify-content-center">
+        <form  class="d-flex justify-content-center " id="form-row">
             <input  style="min-width:300px; background:rgb(245,245,245);" type="text" class="form-control border-0" placeholder="Search by title, author or keyboard">
-            <button class="btn btn-primary">Subscribe</button>
+            <button id="mainbtn" class="btn btn-primary">Subscribe</button>
         </form>
     </div>
         
