--- a/STUDY AREA - ENTREPRENEURSHIP ARTICLES (Strategy) - Article 1/index.html
+++ b/STUDY AREA - ENTREPRENEURSHIP ARTICLES (Strategy) - Article 1/index.html
@@ -16,10 +16,10 @@
 	
 
 
-    <div style="padding:0; box-shadow: 3px 0px 25px rgba(0, 0, 0, 0.11);
-    border-radius: 10px; max-width: 1230px; background-color: white;" class="container-fluid">
+    <div style="overflow-x:hidden; padding:0; box-shadow: 3px 0px 25px rgba(0, 0, 0, 0.11);
+    border-radius: 10px; max-width: 1230px; background-color: white; position: relative;" class="container-fluid">
 
-
+    <img id="greybg" src="img/greybg.png" alt="">
 
     <header >
         <div class="topbar"></div>
@@ -171,13 +171,13 @@
     </header>
 
 
-    <div class="container heaader__category" style=" max-width:900px; margin-bottom: 70px;">
+    <div class="container header__category" style=" max-width:900px; margin-bottom: 70px;">
 
         <div class="row d-flex justify-content-between header-upper-content">
             <div style="text-align: left;" >
                 <h4  style="font-size: 16px; color: #424242; font-weight: 500;">Category</h4>
                 <p style="font-size: 13px; color: #9e9e9e;">Innovation</p>
-                <h4  style="font-size: 16px; color: #424242; font-weight: 500;">Category</h4>
+                <h4  style="font-size: 16px; color: #424242; font-weight: 500;">Content Editor</h4>
                 <p style="font-size: 13px; color: #9e9e9e;">Name & Surname</p>
             </div>
 
@@ -192,7 +192,7 @@
         </div>
 
         <div class="row d-flex justify-content-center">
-;
+
 
             <div class="col-sm-8 d-flex flex-column justify-content-center align-items-center">
                 <img style="max-width: 280px;" src="img/Human Resources.png" alt="" class="img-fluid">
@@ -341,7 +341,8 @@
         <div class="container"><div style="margin-bottom: 50px;" class="grey-line"></div></div>
 
         <div style="max-width:742px; " class="container ">
-            <div class="row d-flex align-items-center">
+
+            <div class="row d-flex align-items-center author-content">
             <div class="d-flex flex-column align-items-center">
 
                 <img style="margin-bottom: 5px; max-width: 133px; height:auto;" src="img/Author - Roberto Saliba.png" class="img-fluid" alt="">
@@ -354,6 +355,7 @@
         </p>
     </div>
         </div>
+
         <div class="container"><div style="margin-bottom: 50px;" class="grey-line"></div></div>
 
         <div style="background:#F5F5F5; padding:35px; max-width:792px;" class="container">
